--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="assets/css/style/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Web-115 Class Work</title>
 </head>
 <body>
-
-
-
-<script scr="assets/js/app.js"></script>
-</body>
+  <div id="wrapper">     
+    <header><h1>Me Here</h1><header>
+    <div id="contentDiv">Content Here</div>
+    <footer>footer</footer>
+    
+</div>
+  
+    <div id="overlays"></div>
+    <script scr="assets/js/app.js"></script>
+  </body>
 </html>
