--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="assets/css/style.css">
-<<<<<<< HEAD
-
-  <!-- Aplies a blue theme
+  <!-- addes blue theme
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">-->
-=======
-  <!--  <link rel="stylesheet" href="assets/css/bootstrap.min.css">-->
->>>>>>> 2019-04-25
 
 
     <title>Web-115 Class Work</title>
@@ -90,7 +85,7 @@
 
           <div id="contentDiv" class="container-fluid">
             <div class="row">
-            
+
               <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card  m-auto" style="width: 18rem;">
                   <img src="https://via.placeholder.com/250x150/888.png/fff" class="card-img-top" alt="...">
